# deep-individual-tracker

./: .gitignore  LICENSE  README.md  docker-compose-cpu.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
density-annotator/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
density-annotator/.github/workflows/: build_container.yaml
density-annotator/annotator/: config.py  constants.py  density_annotator.py  exceptions.py  frame_sampler.py  logger.py  run_annotator.py  utils.py
density-annotator/conf/: annotator.yaml  frame_sampling.yaml  frame_sampling_on_deep.yaml
density-annotator/config/: annotator.yaml  frame_sampling.yaml  test_annotator.yaml
density-annotator/data/demo/annotated/coord/: 0.csv
density-annotator/docs/source/: annotator.config.rst  annotator.constants.rst  annotator.density_annotator.rst  annotator.exceptions.rst  annotator.frame_sampler.rst  annotator.logger.rst  annotator.rst  annotator.run_annotator.rst  annotator.utils.rst  conf.py  index.rst  modules.rst
density-annotator/notebook/: check_annotation_point_number.ipynb
density-annotator/script/: create_docs.sh  run_annotator.sh  run_container.sh  run_sampler.sh
density-annotator/src/: constants.py  density_annotator.py  exceptions.py  frame_sampler.py  run_annotator.py  utils.py
density-annotator/tests/: test_density_annotator.py  test_frame_sampler.py  test_utils.py
image/: .gitignore
individual-detection/: .gitignore  Dockerfile  Dockerfile.cpu  README.md  pyproject.toml  requirements.txt  run_container.sh
individual-detection/conf/: evaluate.yaml  predict.yaml  search_parameter.yaml  train.yaml
individual-detection/config/: detected_point_movie.yaml  evaluate.yaml  predict.yaml  search_parameter.yaml  train.yaml  train_gcp.yaml  train_on_deep.yaml
individual-detection/data/: .gitignore
individual-detection/detector/: clustering.py  config.py  constants.py  create_detected_point_movie.py  evaluate.py  evaluation_metrics.py  exceptions.py  index_manager.py  logger.py  model.py  predict.py  process_dataset.py  search_parameter.py  train.py  utils.py
individual-detection/docs/source/: conf.py  detector.clustering.rst  detector.config.rst  detector.constants.rst  detector.create_detected_point_movie.rst  detector.evaluate.rst  detector.evaluation_metrics.rst  detector.exceptions.rst  detector.index_manager.rst  detector.logger.rst  detector.model.rst  detector.predict.rst  detector.process_dataset.rst  detector.rst  detector.search_parameter.rst  detector.train.rst  detector.utils.rst  index.rst  modules.rst
individual-detection/scripts/: create_detected_point_movie.sh  create_docs.sh  evaluate.sh  predict.sh  run_container.sh  search_parameter.sh  train.sh
individual-detection/src/: clustering.py  constants.py  constatns.py  create_detected_point_movie.py  evaluate.py  evaluation_metrics.py  load_dataset.py  logger.py  model.py  predict.py  process_dataset.py  search_parameter.py  train.py  utils.py
individual-detection/tests/: test_clustering.py  test_create_detected_point_movie.py  test_evaluate.py  test_evaluation.py  test_predict.py  test_process_dataset.py  test_search_parameter.py  test_train.py  test_utils.py
individual-tracking/: .gitignore  Dockerfile  Dockerfile_gpu  README.md
logs/: .gitignore
src/: accuracy.py  clustering.py  cnn.py  cnn_pixel.py  cord2dens.py  estimate_pixel.py  (+10 more)
stats-monitoring/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
stats-monitoring/conf/: monitoring_config.yaml
stats-monitoring/config/: monitoring.yaml
stats-monitoring/docs/source/: conf.py  index.rst  modules.rst  monitoring.config.rst  monitoring.constants.rst  monitoring.exceptions.rst  monitoring.frame.rst  monitoring.generate_animation.rst  monitoring.get_init_figure.rst  monitoring.logger.rst  monitoring.main.rst  monitoring.position_distribution.rst  monitoring.rst  monitoring.stats_metrics.rst
stats-monitoring/monitoring/: config.py  constants.py  exceptions.py  frame.py  generate_animation.py  get_init_figure.py  logger.py  main.py  position_distribution.py  schema.py  stats_metrics.py
stats-monitoring/scripts/: create_docs.sh
stats-monitoring/src/: constants.py  frame.py  generate_animation.py  get_init_figure.py  main.py  position_distribution.py  stats_metrics.py
(+62 files in other folders)
