[tool.poetry]
name = "density-annotator"
version = "0.1.0"
description = "An annotation tool that creates a density map from an image."
authors = ["kenya-sk"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "annotator" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.5"
opencv-python = "^4.5.4"
tqdm = "^4.62.3"
pydantic = "^2.3.0"
pathlib = "^1.0.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.2.1"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
