[tool.poetry]
name = "individual-detection"
version = "0.1.0"
description = ""
authors = ["kenya-sk"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
tqdm = "^4.62.3"
scikit-learn = "^1.2.1"
opencv-python = "^4.5.4"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
