[tool.poetry]
name = "aquarium-tuna-analysis"
version = "0.1.0"
description = ""
authors = ["kenya-sk"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
hydra-core = "^1.1.1"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
pandas = "^1.3.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
