[tool.poetry]
name = "stats-monitoring"
version = "0.1.0"
description = ""
authors = ["kenya-sk"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "monitoring" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
hydra-core = "^1.1.1"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
pandas = "^1.3.4"
matplotlib = "^3.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.2.1"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
